[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template_for_python_package"
version = "0.1.0"
description = "A template for Python packages"
authors = [{name = "Francesco Papaleo"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/francescopapaleo/template_for_python_package"
repository = "https://github.com/francescopapaleo/template_for_python_package"
documentation = "https://github.com/francescopapaleo/template_for_python_package/docs"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    .git
    | __pycache__
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool.pytest.ini_options]
# (optional) Add pytest configuration here
