[metadata]
name = example
version = 0.1.0
author = Francesco Papaleo
description = A template for Python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francescopapaleo/template_for_python_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    # List your project's dependencies here
    # e.g., requests>=2.24.0

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest>=6.0
    flake8>=3.8
    black>=20.8b1

[tool:pytest]
junit_family = xunit2
testpaths = tests

[flake8]
exclude = .git,__pycache__,build,dist

[black]
line-length = 88
include = '\.pyi?$'
exclude = .git,__pycache__,build,dist